test/compile_errors/err_recovery_if_no_body.w
//! expect-error: expected

fn main:
    if
    print("after")
